# OpenArkCompiler

./: .gitignore  .gn  BUILD.gn  Dockerfile  Makefile  Readme.md  Readme_zh.md
src/mapleall/: BUILD.gn
src/mapleall/huawei_secure_c/: BUILD.gn
src/mapleall/huawei_secure_c/include/: securec.h  securectype.h
src/mapleall/huawei_secure_c/src/: fscanf_s.c  fwscanf_s.c  gets_s.c  memcpy_s.c  memmove_s.c  memset_s.c  scanf_s.c  secinput.h  securecutil.c  securecutil.h  secureinput_a.c  secureinput_w.c  secureprintoutput.h  secureprintoutput_a.c  secureprintoutput_w.c  snprintf_s.c  sprintf_s.c  sscanf_s.c  strcat_s.c  strcpy_s.c  strncat_s.c  strncpy_s.c  strtok_s.c  swprintf_s.c  swscanf_s.c  vfscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsnprintf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  vswscanf_s.c  vwscanf_s.c  wcscat_s.c  wcscpy_s.c  wcsncat_s.c  wcsncpy_s.c  wcstok_s.c  wmemcpy_s.c  (+2 more)
src/mapleall/maple_be/: BUILD.gn
src/mapleall/maple_be/mdgen/: gendef.py
src/mapleall/maple_driver/: BUILD.gn
src/mapleall/maple_driver/defs/: default_options.def  phases.def
src/mapleall/maple_driver/include/: compiler.h  compiler_factory.h  compiler_selector.h  driver_option_common.h  driver_runner.h  file_utils.h  jbc2mpl_option.h  maple_dex2mpl_option.h  mpl_options.h  option_descriptor.h  option_parser.h  safe_exe.h
src/mapleall/maple_driver/src/: as_compiler.cpp  compiler.cpp  compiler_factory.cpp  compiler_selector.cpp  dex2mpl_compiler.cpp  driver_option_common.cpp  driver_runner.cpp  file_utils.cpp  ipa_compiler.cpp  jbc2mpl_compiler.cpp  ld_compiler.cpp  maple.cpp  maple_comb_compiler.cpp  mpl_options.cpp  mplcg_compiler.cpp  option_parser.cpp
src/mapleall/maple_ipa/: BUILD.gn
src/mapleall/maple_ipa/include/: call_graph.h  clone.h  do_ipa_escape_analysis.h  ea_connection_graph.h  inline.h  interleaved_manager.h  ipa_escape_analysis.h  ipa_option.h  method_replace.h  module_phase.h  module_phase_manager.h  module_phases.def  mrt_info.def  retype.h  tobe_cloned_funcs.def  tobe_replaced_funcs.def
src/mapleall/maple_ipa/src/: call_graph.cpp  clone.cpp  do_ipa_escape_analysis.cpp  ea_connection_graph.cpp  inline.cpp  interleaved_manager.cpp  ipa_escape_analysis.cpp  ipa_option.cpp  method_replace.cpp  module_phase_manager.cpp  retype.cpp
src/mapleall/maple_ir/: BUILD.gn
src/mapleall/maple_ir/include/: all_attributes.def  bin_mir_file.h  bin_mpl_export.h  bin_mpl_import.h  bin_mplt.h  cfg_primitive_types.h  cmpl.h  debug_info.h  global_tables.h  intrinsic_c.def  intrinsic_dai.def  intrinsic_js.def  intrinsic_js_eng.def  intrinsic_op.h  intrinsic_vector.def  intrinsics.def  intrinsics.h  java_eh_lower.h  keywords.def  lexer.h  metadata_layout.h  mir_builder.h  mir_config.h  mir_const.h  mir_function.h  mir_lower.h  mir_module.h  mir_nodes.h  mir_parser.h  mir_pragma.h  mir_preg.h  mir_symbol.h  mir_symbol_builder.h  mir_type.h  opcode_info.h  opcodes.def  opcodes.h  option.h  parser_opt.h  prim_types.def  (+9 more)
src/mapleall/maple_ir/src/: bin_func_export.cpp  bin_func_import.cpp  bin_mpl_export.cpp  bin_mpl_import.cpp  debug_info.cpp  debug_info_util.cpp  driver.cpp  global_tables.cpp  intrinsics.cpp  lexer.cpp  mir_builder.cpp  mir_const.cpp  mir_function.cpp  mir_lower.cpp  mir_module.cpp  mir_nodes.cpp  mir_parser.cpp  mir_pragma.cpp  mir_symbol.cpp  mir_symbol_builder.cpp  mir_type.cpp  mpl_dbg.cpp  opcode_info.cpp  option.cpp  parser.cpp  printing.cpp  verification.cpp  verify_annotation.cpp  verify_mark.cpp
src/mapleall/maple_me/: BUILD.gn
src/mapleall/maple_me/include/: alias_analysis_table.h  alias_class.h  bb.h  cfg_opt.h  copy_prop.h  demand_driven_alias_analysis.h  dominance.h  dse.h  func_emit.h  hdse.h  ipa_side_effect.h  irmap.h  irmap_build.h  lfo_dep_test.h  lfo_function.h  lfo_inject_iv.h  lfo_iv_canon.h  lfo_loop_vec.h  lfo_mir_lower.h  lfo_mir_nodes.h  lfo_pre_emit.h  me_abco.h  me_alias_class.h  me_analyze_rc.h  me_analyzector.h  me_bb_analyze.h  me_bb_layout.h  me_builder.h  me_bypath_eh.h  me_cfg.h  me_cfg_mst.h  me_cfg_opt.h  me_check_cast.h  me_cond_based.h  me_cond_based_npc.h  me_cond_based_rc.h  me_const.h  me_critical_edge.h  me_delegate_rc.h  me_dominance.h  (+60 more)
src/mapleall/maple_me/src/: alias_analysis_table.cpp  alias_class.cpp  bb.cpp  cfg_opt.cpp  copy_prop.cpp  demand_driven_alias_analysis.cpp  dominance.cpp  dse.cpp  func_emit.cpp  hdse.cpp  ipa_side_effect.cpp  irmap.cpp  irmap_build.cpp  irmap_emit.cpp  lfo_dep_test.cpp  lfo_inject_iv.cpp  lfo_iv_canon.cpp  lfo_loop_vec.cpp  lfo_mir_lower.cpp  lfo_pre_emit.cpp  me_abco.cpp  me_alias_class.cpp  me_analyze_rc.cpp  me_analyzector.cpp  me_bb_analyze.cpp  me_bb_layout.cpp  me_builder.cpp  me_bypath_eh.cpp  me_cfg.cpp  me_cfg_opt.cpp  me_check_cast.cpp  (+60 more)
src/mapleall/maple_phase/: BUILD.gn
src/mapleall/maple_util/: BUILD.gn
src/mapleall/mempool/: BUILD.gn
src/mapleall/mpl2mpl/: BUILD.gn
src/mplfe/: BUILD.gn  README.md
src/mplfe/test/: BUILD.gn  ast_expr_test.cpp  base64_test.cpp  basic_io_test.cpp  bc_load_on_demand_type_test.cpp  bc_parser_test.cpp  bc_util_test.cpp  cov_check.sh  dex_class_test.cpp  dex_file_util_test.cpp  dex_reader_test.cpp  fe_algorithm_test.cpp  fe_file_ops_test.cpp  fe_file_type_test.cpp  fe_function_process_schedular_test.cpp  fe_function_test.cpp  fe_struct_elem_info_test.cpp  fe_type_hierarchy_test.cpp  fe_type_manager_test.cpp  fe_utils_test.cpp  feir_builder_test.cpp  feir_stmt_bb_test.cpp  feir_stmt_dfg_test.cpp  feir_stmt_loc_test.cpp  feir_stmt_test.cpp  feir_test_base.cpp  feir_test_base.h  feir_type_helper_test.cpp  feir_type_infer_test.cpp  feir_type_test.cpp  feir_var_test.cpp  jbc_class2fe_helper_test.cpp  jbc_class_const_test.cpp  jbc_class_test.cpp  jbc_function_test.cpp  jbc_opcode_helper_test.cpp  jbc_stack2fe_helper_test.cpp  jbc_stack_helper_test.cpp  jbc_util_test.cpp  mplfeUT.cpp  (+9 more)
src/mrt/: BUILD.gn  README  unified.macros.def
src/mrt/compiler-rt/: BUILD.gn
src/mrt/dexinterface/: BUILD.gn
src/mrt/huawei_secure_c/: BUILD.gn
src/mrt/interpreter/: BUILD.gn
src/mrt/libcore-static-binding-jni/: BUILD.gn
src/mrt/maplert/: BUILD.gn
(+6904 files in other folders)
