#
# Copyright (c) [2020] Huawei Technologies Co.,Ltd.All rights reserved.
#
# OpenArkCompiler is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#
#     http://license.coscl.org.cn/MulanPSL2
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.
#
group("maple") {
  deps = [
    "${MAPLEALL_ROOT}:maple",
  ]
}

group("irbuild") {
  deps = [
    "${MAPLEALL_ROOT}:irbuild",
  ]
}

group("mplfe") {
  deps = [
    "${MPLFE_ROOT}:mplfe",
  ]
}

group("mplfeUT") {
  deps = [
    "${MPLFE_ROOT}/test:mplfeUT",
  ]
}

group("maple-rt") {
  deps = [
    "${MAPLE_MRT_ROOT}:maple-rt",
  ]
}

group("ast2mpl") {
  deps = []
  if (IS_AST2MPL_EXISTS == "1") {
    deps = [
      "${AST2MPL_ROOT}/src:ast2mpl",
    ]
  }
}

group("maplegendef") {
  exec_script("${MAPLEALL_ROOT}/maple_be/mdgen/gendef.py",
              [
                rebase_path("${GN_BINARY_OUTPUT_DIRECTORY}/maplegen",
                            root_build_dir),
                rebase_path("${MAPLEALL_ROOT}/maple_be/include/ad/cortex_a55",
                            root_build_dir),
                rebase_path("${MAPLE_BUILD_OUTPUT}/common/target",
                            root_build_dir),
              ])
}
