#
# Copyright (c) [2020] Huawei Technologies Co.,Ltd.All rights reserved.
#
# OpenArkCompiler is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#
#     http://license.coscl.org.cn/MulanPSL2
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.
#
configs = [ "${MAPLEALL_ROOT}:mapleallcompilecfg" ]
if (COV_CHECK == 1) {
  cflags = [ "-DENABLE_COV_CHECK=1" ]
}

cflags += [
  "-DMIR_FEATURE_FULL=1",
  "-DMPLFE_FULL_INFO_DUMP=1",
]

include_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/jbc_input/include",
  "${MPLFE_ROOT}/bc_input/include",
  "${MPLFE_ROOT}/dex_input/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_ipa/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_phase/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mpl2mpl/include",
  "${MAPLEALL_ROOT}/maple_me/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLE_ROOT}/third_party/bounds_checking_function/include",
]

static_library("lib_mplfe_util") {
  sources = [
    "${MPLFE_ROOT}/common/src/base64.cpp",
    "${MPLFE_ROOT}/common/src/basic_io.cpp",
    "${MPLFE_ROOT}/common/src/fe_config_parallel.cpp",
    "${MPLFE_ROOT}/common/src/fe_file_ops.cpp",
    "${MPLFE_ROOT}/common/src/fe_file_type.cpp",
    "${MPLFE_ROOT}/common/src/fe_function.cpp",
    "${MPLFE_ROOT}/common/src/fe_function_phase_result.cpp",
    "${MPLFE_ROOT}/common/src/fe_input_helper.cpp",
    "${MPLFE_ROOT}/common/src/fe_java_string_manager.cpp",
    "${MPLFE_ROOT}/common/src/fe_manager.cpp",
    "${MPLFE_ROOT}/common/src/fe_options.cpp",
    "${MPLFE_ROOT}/common/src/fe_struct_elem_info.cpp",
    "${MPLFE_ROOT}/common/src/fe_timer_ns.cpp",
    "${MPLFE_ROOT}/common/src/fe_type_hierarchy.cpp",
    "${MPLFE_ROOT}/common/src/fe_type_manager.cpp",
    "${MPLFE_ROOT}/common/src/fe_utils.cpp",
    "${MPLFE_ROOT}/common/src/fe_utils_java.cpp",
    "${MPLFE_ROOT}/common/src/feir_builder.cpp",
    "${MPLFE_ROOT}/common/src/feir_dfg.cpp",
    "${MPLFE_ROOT}/common/src/feir_stmt.cpp",
    "${MPLFE_ROOT}/common/src/feir_type.cpp",
    "${MPLFE_ROOT}/common/src/feir_type_helper.cpp",
    "${MPLFE_ROOT}/common/src/feir_type_infer.cpp",
    "${MPLFE_ROOT}/common/src/feir_var.cpp",
    "${MPLFE_ROOT}/common/src/feir_var_name.cpp",
    "${MPLFE_ROOT}/common/src/feir_var_reg.cpp",
    "${MPLFE_ROOT}/common/src/feir_var_type_scatter.cpp",
    "${MPLFE_ROOT}/common/src/general_bb.cpp",
    "${MPLFE_ROOT}/common/src/general_cfg.cpp",
    "${MPLFE_ROOT}/common/src/general_stmt.cpp",
    "${MPLFE_ROOT}/common/src/mplfe_compiler.cpp",
    "${MPLFE_ROOT}/common/src/mplfe_compiler_component.cpp",
    "${MPLFE_ROOT}/common/src/mplfe_env.cpp",
    "${MPLFE_ROOT}/common/src/mplfe_options.cpp",
    "${MPLFE_ROOT}/common/src/simple_xml.cpp",
    "${MPLFE_ROOT}/common/src/simple_zip.cpp",
  ]
  include_dirs = include_directories
  output_dir = "${root_out_dir}/ar"
}

static_library("lib_mplfe_input") {
  sources = [
    "${MPLFE_ROOT}/common/src/fe_input_helper.cpp",
  ]
  include_dirs = include_directories
  output_dir = "${root_out_dir}/ar"
}

executable("mplfe") {
  sources = [
    "${MPLFE_ROOT}/common/src/mplfe.cpp",
  ]
  include_dirs = include_directories
  deps = [
    ":lib_mplfe_input",
    ":lib_mplfe_jbc_input",
    ":lib_mplfe_bc_input",
    ":lib_mplfe_dex_input",
    ":lib_mplfe_util",
    "${MAPLE_ROOT}/third_party/bounds_checking_function:libHWSecureC",
    "${MAPLEALL_ROOT}/maple_driver:libdriver_option",
    "${MAPLEALL_ROOT}/maple_ir:libmplir",
    "${MAPLEALL_ROOT}/mpl2mpl:libmpl2mpl",
    "${MAPLEALL_ROOT}/mempool:libmempool",
    "${MAPLEALL_ROOT}/maple_util:libmplutil",
  ]
  ldflags = [ "-lz" ]
}

include_jbc_input_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/jbc_input/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLE_ROOT}/third_party/bounds_checking_function/include",
]

static_library("lib_mplfe_jbc_input") {
  sources = [
    "${MPLFE_ROOT}/jbc_input/src/jbc_attr.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_attr_item.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_bb.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_class.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_class2fe_helper.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_class_const.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_class_const_pool.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_compiler_component.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_function.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_function_context.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_input.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_opcode.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_opcode_helper.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_stack2fe_helper.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_stack_helper.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_stmt.cpp",
    "${MPLFE_ROOT}/jbc_input/src/jbc_util.cpp",
  ]
  include_dirs = include_jbc_input_directories
  output_dir = "${root_out_dir}/ar"
}

include_bc_input_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/bc_input/include",
  "${MPLFE_ROOT}/dex_input/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLE_ROOT}/third_party/bounds_checking_function/include",
]

static_library("lib_mplfe_bc_input") {
  sources = [
    "${MPLFE_ROOT}/bc_input/src/bc_io.cpp",
    "${MPLFE_ROOT}/bc_input/src/bc_parser_base.cpp",
    "${MPLFE_ROOT}/bc_input/src/bc_class.cpp",
    "${MPLFE_ROOT}/bc_input/src/bc_function.cpp",
    "${MPLFE_ROOT}/bc_input/src/bc_class2fe_helper.cpp",
    "${MPLFE_ROOT}/bc_input/src/bc_util.cpp",
    "${MPLFE_ROOT}/bc_input/src/bc_instruction.cpp",
    "${MPLFE_ROOT}/bc_input/src/ark_annotation_map.cpp",
    "${MPLFE_ROOT}/bc_input/src/ark_annotation_processor.cpp",
    "${MPLFE_ROOT}/bc_input/src/bc_pragma.cpp",
  ]
  include_dirs = include_bc_input_directories
  output_dir = "${root_out_dir}/ar"
}

include_dex_input_directories = [
  "${MPLFE_ROOT}/common/include",
  "${MPLFE_ROOT}/bc_input/include",
  "${MPLFE_ROOT}/dex_input/include",
  "${MAPLEALL_ROOT}/maple_ir/include",
  "${MAPLEALL_ROOT}/maple_util/include",
  "${MAPLEALL_ROOT}/maple_driver/include",
  "${MAPLEALL_ROOT}/mempool/include",
  "${MAPLE_ROOT}/third_party/bounds_checking_function/include",
]

static_library("lib_mplfe_dex_input") {
  sources = [
    "${MPLFE_ROOT}/dex_input/src/dex_class.cpp",
    "${MPLFE_ROOT}/dex_input/src/dex_class2fe_helper.cpp",
    "${MPLFE_ROOT}/dex_input/src/dex_file_util.cpp",
    "${MPLFE_ROOT}/dex_input/src/dex_op.cpp",
    "${MPLFE_ROOT}/dex_input/src/dex_strfac.cpp",
    "${MPLFE_ROOT}/dex_input/src/dex_pragma.cpp",
    "${MPLFE_ROOT}/dex_input/src/dex_encode_value.cpp",
    "${MPLFE_ROOT}/dex_input/src/class_loader_context.cpp",
    "${MPLFE_ROOT}/dex_input/src/class_linker.cpp",
  ]

  # for libdexfile
  include_dirs_dex = [
    "${ANDROID_ROOT}/system/core/include",
  ]
  include_dirs_libdexfile = [
    #for libdexfile -start
    "${ANDROID_ROOT}/system/core/liblog/include",
    "${ANDROID_ROOT}/system/core/libutils/include",
    "${ANDROID_ROOT}/system/core/base/include",
    "${ANDROID_ROOT}/system/core/libziparchive/include",
    "${ANDROID_ROOT}/art/libartpalette/include",
    "${ANDROID_ROOT}/art/libartbase",
    "${ANDROID_ROOT}/art/libdexfile",
    "${ANDROID_ROOT}/include",
    "${THIRD_PARTY_ROOT}/libnativehelper/include_jni",
    #for libdexfile -end
  ]

  sources += [
    "${MPLFE_ROOT}/dex_input/src/dex_parser.cpp",
    "${MPLFE_ROOT}/dex_input/src/dex_reader.cpp",
    "${MPLFE_ROOT}/dex_input/src/dexfile_interface.cpp",
    "${MPLFE_ROOT}/dex_input/src/dexfile_factory.cpp",
    "${MPLFE_ROOT}/dex_input/src/dexfile_libdexfile.cpp",
  ]
  deps_libdexfile = [
    "${ANDROID_ROOT}/art/libdexfile:libdexfile",
    "${ANDROID_ROOT}/system/core/libziparchive:libziparchive",
    "${ANDROID_ROOT}/system/core/base:libbase",
  ]
  lib_dex = [
    "${ANDROID_ROOT}/out/soong/.intermediates/system/core/liblog/liblog/linux_glibc_x86_64_static/liblog.a",
  ]
  deps = deps_libdexfile
  libs = lib_dex
  include_dirs = include_dex_input_directories + include_dirs_libdexfile + include_dirs_dex
  output_dir = "${root_out_dir}/ar"
}
